# p4cli-20251

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: downloader.rs  finder.rs  lib.rs  platform.rs
tests/: integration.rs
