[package]
name = "p4cli-20251"
version = "0.6.1"
edition = "2024"
description = "A simple Rust library for full-featured P4 (Perforce) CLI without bundling the binary — auto-detects system p4 or downloads from Perforce's official filehost. All errors are propagated via Result without any unwrap."
readme = "README.md"
repository = "https://github.com/CatScarf/p4cli-20251"
license = "MIT"

[dependencies]
tempfile = "3"
ureq = "3"
